--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,16 @@ dependencies {
 
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
 
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-database:20.0.2'
 
     //jetbrains can be error
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'org.jetbrains:annotations:15.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
