--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WoofNew">
         <activity
+            android:name=".UpdateDog"
+            android:exported="true" />
+        <activity
             android:name=".LoginScreen_Part2"
             android:exported="true" />
         <activity
