--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.woofnew">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -13,9 +14,6 @@
         android:theme="@style/Theme.WoofNew">
         <activity
             android:name=".UpdateDog"
-            android:exported="true" />
-        <activity
-            android:name=".LoginScreen_Part2"
             android:exported="true" />
         <activity
             android:name=".DogsDetailsPageOne"
