Completed Create Process

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WoofNew">
         <activity
-            android:name=".LoginScreen_Part2"
-            android:exported="true" />
-        <activity
-            android:name=".DogsDetailsPageOne"
+            android:name=".DogDetailsPageOne"
             android:exported="true" />
         <activity
             android:name=".AddDog"
