Completed Retrieve two recycler views

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WoofNew">
         <activity
+            android:name=".DogDetailsPageOne"
+            android:exported="true" />
+        <activity
+            android:name=".DogDetailsPageTwo"
+            android:exported="true" />
+        <activity
             android:name=".SplashScreen"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.NoActionBar">
@@ -28,9 +34,6 @@
             android:exported="true" />
         <activity
             android:name=".UpdateDog"
-            android:exported="true" />
-        <activity
-            android:name=".DogsDetailsPageOne"
             android:exported="true" />
         <activity
             android:name=".AddDog"
