--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.orhanobut:dialogplus:1.11@aar'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
